Personalized intelligent ranking for open search requests (#138)
* Personalized intelligent ranking for open search requests

Description:
============
This change uses search pipeline feature of open search to allow customers to create a response processor.
Response processor will rerank search results obtained from open search using Personalization solution before returning results to the user.

Check List:
==========
- [Y] New functionality includes testing.
  - [Y] All tests pass
- [Y] New functionality has been documented.
  - [Y] New functionality has javadoc added
- [Y] Commits are signed as per the DCO using --signoff

Signed-off-by: Ketan Kulkarni <kektnr@amazon.com>

* Support passing user id for Personalization as part of search request

Description:
============
This change introduces ability ot pass user id as part of search request to be used by Personalize response processor.
SearchExtSpec will be used to support getting user id as well as other personalize related request parameters to personalize search results.

Check list:
===========
- [x] New functionality includes testing.
  - [x] All tests pass
- [x] New functionality has been documented.
  - [x] New functionality has javadoc added
- [x] Commits are signed as per the DCO using --signoff

Signed-off-by: Ketan Kulkarni <kektnr@amazon.com>

* Incorporate changes to SearchPipelinePlugin interface

Description:
============
SearchPipelinePlugin interface now uses Processor.Factory<SearchResponseProcessor> instead of Processor.Factory.
Also use getResponseProcessors method instead of getProcessors method.

Check list:
===========
- [x] New functionality includes testing.
  - [x] All tests pass
- [x] New functionality has been documented.
  - [x] New functionality has javadoc added
- [x] Commits are signed as per the DCO using --signoff

Signed-off-by: Ketan Kulkarni <kektnr@amazon.com>

* Improve test coverage

Added unit tests for PersonalizeRankingResponseProcessor and
PersonalizeRequestParameterU